# point-cloud-donkey

./: LICENSE  README.md
config/: default.ism  default_config_kinect.ism  ism_3d.yaml  qs_input_config.ism
data/: qs_test_list.txt  qs_train_list.txt  test_list_example.txt  train_list_example.txt
src/: CMakeLists.txt
src/eval_pipelines/eval_pipeline_aldoma/: eval_global_hv.cpp  eval_global_hv_detection.cpp  eval_pcl_orcg.cpp  global_hv.cpp  global_hv.h  pcl_orcg.cpp
src/eval_pipelines/eval_pipeline_knopp/: eval_pcl_ism.cpp  implicit_shape_model.h  implicit_shape_model.hpp  pcl_ism.cpp  pcl_ism.h
src/eval_pipelines/eval_pipeline_mccann/: eval_lnbnn.cpp  lnbnn.cpp  lnbnn.h
src/eval_pipelines/eval_pipeline_tombari/: eval_hough3d.cpp  eval_hough3d_detection.cpp  hough3d.cpp  hough3d.h
src/eval_pipelines/eval_pipeline_zhou/: eval_self_adapt_hghv.cpp  eval_self_adapt_hghv_detection.cpp  self_adapt_hghv.cpp  self_adapt_hghv.h
src/eval_pipelines/pipeline_building_blocks/: feature_processing.cpp  feature_processing.h  pipeline_building_blocks.cpp  pipeline_building_blocks.h
src/eval_tool/: eval_classification.cpp  eval_detection.cpp  eval_helpers.h  eval_helpers_detection.h  logging_to_files.h  main.cpp
src/ground_truth_gui/: ground_truth_gui.cpp  ground_truth_gui.h  main.cpp
src/implicit_shape_model/: CMakeLists.txt  implicit_shape_model.cpp  implicit_shape_model.h
src/implicit_shape_model/activation_strategy/: activation_strategy.cpp  activation_strategy.h  activation_strategy_factory.h  activation_strategy_inn.cpp  activation_strategy_inn.h  activation_strategy_knn.cpp  activation_strategy_knn.h  activation_strategy_knn_rule.cpp  activation_strategy_knn_rule.h  activation_strategy_threshold.cpp  activation_strategy_threshold.h
src/implicit_shape_model/classifier/: custom_SVM.cpp  custom_SVM.h  global_classifier.cpp  global_classifier.h
src/implicit_shape_model/clustering/: clustering.cpp  clustering.h  clustering_agglomerative.cpp  clustering_agglomerative.h  clustering_factory.h  clustering_kmeans.cpp  clustering_kmeans.h  clustering_kmeans_count.cpp  clustering_kmeans_count.h  clustering_kmeans_factor.cpp  clustering_kmeans_factor.h  clustering_kmeans_hartigan.cpp  clustering_kmeans_hartigan.h  clustering_kmeans_thumb_rule.cpp  clustering_kmeans_thumb_rule.h  clustering_none.cpp  clustering_none.h
src/implicit_shape_model/codebook/: codebook.cpp  codebook.h  codebook_factory.h  codeword.cpp  codeword.h  codeword_distribution.cpp  codeword_distribution.h  codeword_distribution_factory.h  codeword_factory.h
src/implicit_shape_model/feature_ranking/: feature_ranking.cpp  feature_ranking.h  ranking_factory.h  ranking_incremental.cpp  ranking_incremental.h  ranking_knn_activation.cpp  ranking_knn_activation.h  ranking_naive_bayes.cpp  ranking_naive_bayes.h  ranking_similarity.cpp  ranking_similarity.h  ranking_strangeness.cpp  ranking_strangeness.h  ranking_uniform.cpp  ranking_uniform.h
src/implicit_shape_model/features/: features.cpp  features.h  features_3dsc.cpp  features_3dsc.h  features_bshot.cpp  features_bshot.h  features_cgf.cpp  features_cgf.h  features_cospair.cpp  features_cospair.h  features_cshot.cpp  features_cshot.h  features_cshot_global.cpp  features_cshot_global.h  features_cvfh.cpp  features_cvfh.h  features_dummy.cpp  features_dummy.h  features_esf.cpp  features_esf.h  features_esf_local.cpp  features_esf_local.h  features_factory.h  features_fpfh.cpp  features_fpfh.h  features_gasd.cpp  features_gasd.h  features_grsd.cpp  features_grsd.h  features_narf.cpp  features_narf.h  features_ourcvfh.cpp  features_ourcvfh.h  features_pfh.cpp  features_pfh.h  features_rift.cpp  features_rift.h  features_rops.cpp  features_rops.h  features_rsd.cpp  (+21 more)
src/implicit_shape_model/keypoints/: keypoints.cpp  keypoints.h  keypoints_factory.h  keypoints_harris3d.cpp  keypoints_harris3d.h  keypoints_iss3d.cpp  keypoints_iss3d.h  keypoints_sift3d.cpp  keypoints_sift3d.h  keypoints_voxel_grid.cpp  keypoints_voxel_grid.h  keypoints_voxel_grid_culling.cpp  keypoints_voxel_grid_culling.h
src/implicit_shape_model/utils/: debug_utils.cpp  debug_utils.h  distance.cpp  distance.h  exception.cpp  exception.h  factory.h  flann_helper.cpp  flann_helper.h  ism_feature.cpp  ism_feature.h  json_object.cpp  json_object.h  json_parameter.h  json_parameter_base.cpp  json_parameter_base.h  json_parameter_traits.h  normal_orientation.cpp  normal_orientation.h  point_cloud_resizing.cpp  point_cloud_resizing.h  utils.cpp  utils.h
src/implicit_shape_model/voting/: global_classifier.cpp  global_classifier.h  maxima_handler.cpp  maxima_handler.h  single_object_mode_helper.cpp  single_object_mode_helper.h  voting.cpp  voting.h  voting_factory.h  voting_hough_3d.cpp  voting_hough_3d.h  voting_maximum.h  voting_mean_shift.cpp  voting_mean_shift.h
src/model_gui/: main.cpp  model_gui.cpp  model_gui.h
src/training_gui/: ism_worker.cpp  ism_worker.h  main.cpp  model_dlg.cpp  model_dlg.h  training_gui.cpp  training_gui.h
src/vtk_utils/: CMakeLists.txt  interactor_ortho.cpp  interactor_ortho.h  interactor_scene.cpp  interactor_scene.h  render_view.cpp  render_view.h
supplements/icarsc2021/: rgbd-dataset-classes-instances.txt
